EDG-732: Refactor ChaosProtocolAdapter and ChaosScript for improved readability and performance; update MailboxConcurrencyTest to use try-with-resources